// Vitest Snapshot v1

exports[`renders a NextImage for a given field 1`] = `
<span
  style={
    {
      "background": "none",
      "border": 0,
      "boxSizing": "border-box",
      "display": "inline-block",
      "height": "initial",
      "margin": 0,
      "maxWidth": "100%",
      "opacity": 1,
      "overflow": "hidden",
      "padding": 0,
      "position": "relative",
      "width": "initial",
    }
  }
>
  <span
    style={
      {
        "background": "none",
        "border": 0,
        "boxSizing": "border-box",
        "display": "block",
        "height": "initial",
        "margin": 0,
        "maxWidth": "100%",
        "opacity": 1,
        "padding": 0,
        "width": "initial",
      }
    }
  >
    <img
      alt=""
      aria-hidden={true}
      src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%276000%27%20height=%274000%27/%3e"
      style={
        {
          "background": "none",
          "border": 0,
          "display": "block",
          "height": "initial",
          "margin": 0,
          "maxWidth": "100%",
          "opacity": 1,
          "padding": 0,
          "width": "initial",
        }
      }
    />
  </span>
  <img
    alt="In hendrerit gravida rutrum quisque non tellus orci ac auctor augue mauris augue"
    data-nimg="intrinsic"
    decoding="async"
    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
    style={
      {
        "border": "none",
        "bottom": 0,
        "boxSizing": "border-box",
        "display": "block",
        "height": 0,
        "left": 0,
        "margin": "auto",
        "maxHeight": "100%",
        "maxWidth": "100%",
        "minHeight": "100%",
        "minWidth": "100%",
        "objectFit": undefined,
        "objectPosition": undefined,
        "padding": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": 0,
      }
    }
  />
  <noscript>
    <img
      alt="In hendrerit gravida rutrum quisque non tellus orci ac auctor augue mauris augue"
      data-nimg="intrinsic"
      decoding="async"
      loading="lazy"
      src="https://images.unsplash.com/photo-1446329813274-7c9036bd9a1f?w=3840&fit=crop"
      srcSet="https://images.unsplash.com/photo-1446329813274-7c9036bd9a1f?w=3840&fit=crop 1x"
      style={
        {
          "border": "none",
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "height": 0,
          "left": 0,
          "margin": "auto",
          "maxHeight": "100%",
          "maxWidth": "100%",
          "minHeight": "100%",
          "minWidth": "100%",
          "objectFit": undefined,
          "objectPosition": undefined,
          "padding": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": 0,
        }
      }
    />
  </noscript>
</span>
`;

exports[`supports layout="fill" 1`] = `
<span
  style={
    {
      "background": "none",
      "border": 0,
      "bottom": 0,
      "boxSizing": "border-box",
      "display": "block",
      "height": "initial",
      "left": 0,
      "margin": 0,
      "opacity": 1,
      "overflow": "hidden",
      "padding": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "width": "initial",
    }
  }
>
  <img
    alt="Feugiat sed lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi tincidunt"
    data-nimg="fill"
    decoding="async"
    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
    style={
      {
        "border": "none",
        "bottom": 0,
        "boxSizing": "border-box",
        "display": "block",
        "height": 0,
        "left": 0,
        "margin": "auto",
        "maxHeight": "100%",
        "maxWidth": "100%",
        "minHeight": "100%",
        "minWidth": "100%",
        "objectFit": undefined,
        "objectPosition": undefined,
        "padding": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": 0,
      }
    }
  />
  <noscript>
    <img
      alt="Feugiat sed lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi tincidunt"
      data-nimg="fill"
      decoding="async"
      loading="lazy"
      sizes="100vw"
      src="https://images.unsplash.com/photo-1441974231531-c6227db76b6e?w=3840&fit=crop"
      srcSet="https://images.unsplash.com/photo-1441974231531-c6227db76b6e?w=640&fit=crop 640w, https://images.unsplash.com/photo-1441974231531-c6227db76b6e?w=750&fit=crop 750w, https://images.unsplash.com/photo-1441974231531-c6227db76b6e?w=828&fit=crop 828w, https://images.unsplash.com/photo-1441974231531-c6227db76b6e?w=1080&fit=crop 1080w, https://images.unsplash.com/photo-1441974231531-c6227db76b6e?w=1200&fit=crop 1200w, https://images.unsplash.com/photo-1441974231531-c6227db76b6e?w=1920&fit=crop 1920w, https://images.unsplash.com/photo-1441974231531-c6227db76b6e?w=2048&fit=crop 2048w, https://images.unsplash.com/photo-1441974231531-c6227db76b6e?w=3840&fit=crop 3840w"
      style={
        {
          "border": "none",
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "height": 0,
          "left": 0,
          "margin": "auto",
          "maxHeight": "100%",
          "maxWidth": "100%",
          "minHeight": "100%",
          "minWidth": "100%",
          "objectFit": undefined,
          "objectPosition": undefined,
          "padding": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": 0,
        }
      }
    />
  </noscript>
</span>
`;

exports[`supports layout="fixed" 1`] = `
<span
  style={
    {
      "background": "none",
      "border": 0,
      "boxSizing": "border-box",
      "display": "inline-block",
      "height": 3036,
      "margin": 0,
      "opacity": 1,
      "overflow": "hidden",
      "padding": 0,
      "position": "relative",
      "width": 4554,
    }
  }
>
  <img
    alt="Tempor orci eu lobortis elementum nibh tellus molestie nunc non blandit massa"
    data-nimg="fixed"
    decoding="async"
    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
    style={
      {
        "border": "none",
        "bottom": 0,
        "boxSizing": "border-box",
        "display": "block",
        "height": 0,
        "left": 0,
        "margin": "auto",
        "maxHeight": "100%",
        "maxWidth": "100%",
        "minHeight": "100%",
        "minWidth": "100%",
        "objectFit": undefined,
        "objectPosition": undefined,
        "padding": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": 0,
      }
    }
  />
  <noscript>
    <img
      alt="Tempor orci eu lobortis elementum nibh tellus molestie nunc non blandit massa"
      data-nimg="fixed"
      decoding="async"
      loading="lazy"
      src="https://images.unsplash.com/photo-1470770903676-69b98201ea1c?w=3840&fit=crop"
      srcSet="https://images.unsplash.com/photo-1470770903676-69b98201ea1c?w=3840&fit=crop 1x"
      style={
        {
          "border": "none",
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "height": 0,
          "left": 0,
          "margin": "auto",
          "maxHeight": "100%",
          "maxWidth": "100%",
          "minHeight": "100%",
          "minWidth": "100%",
          "objectFit": undefined,
          "objectPosition": undefined,
          "padding": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": 0,
        }
      }
    />
  </noscript>
</span>
`;

exports[`supports layout="intrinsic" 1`] = `
<span
  style={
    {
      "background": "none",
      "border": 0,
      "boxSizing": "border-box",
      "display": "inline-block",
      "height": "initial",
      "margin": 0,
      "maxWidth": "100%",
      "opacity": 1,
      "overflow": "hidden",
      "padding": 0,
      "position": "relative",
      "width": "initial",
    }
  }
>
  <span
    style={
      {
        "background": "none",
        "border": 0,
        "boxSizing": "border-box",
        "display": "block",
        "height": "initial",
        "margin": 0,
        "maxWidth": "100%",
        "opacity": 1,
        "padding": 0,
        "width": "initial",
      }
    }
  >
    <img
      alt=""
      aria-hidden={true}
      src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%274240%27%20height=%272832%27/%3e"
      style={
        {
          "background": "none",
          "border": 0,
          "display": "block",
          "height": "initial",
          "margin": 0,
          "maxWidth": "100%",
          "opacity": 1,
          "padding": 0,
          "width": "initial",
        }
      }
    />
  </span>
  <img
    alt="Sed vulputate mi sit amet"
    data-nimg="intrinsic"
    decoding="async"
    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
    style={
      {
        "border": "none",
        "bottom": 0,
        "boxSizing": "border-box",
        "display": "block",
        "height": 0,
        "left": 0,
        "margin": "auto",
        "maxHeight": "100%",
        "maxWidth": "100%",
        "minHeight": "100%",
        "minWidth": "100%",
        "objectFit": undefined,
        "objectPosition": undefined,
        "padding": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": 0,
      }
    }
  />
  <noscript>
    <img
      alt="Sed vulputate mi sit amet"
      data-nimg="intrinsic"
      decoding="async"
      loading="lazy"
      src="https://images.unsplash.com/photo-1604537466608-109fa2f16c3b?w=3840&fit=crop"
      srcSet="https://images.unsplash.com/photo-1604537466608-109fa2f16c3b?w=3840&fit=crop 1x"
      style={
        {
          "border": "none",
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "height": 0,
          "left": 0,
          "margin": "auto",
          "maxHeight": "100%",
          "maxWidth": "100%",
          "minHeight": "100%",
          "minWidth": "100%",
          "objectFit": undefined,
          "objectPosition": undefined,
          "padding": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": 0,
        }
      }
    />
  </noscript>
</span>
`;

exports[`supports layout="responsive" 1`] = `
<span
  style={
    {
      "background": "none",
      "border": 0,
      "boxSizing": "border-box",
      "display": "block",
      "height": "initial",
      "margin": 0,
      "opacity": 1,
      "overflow": "hidden",
      "padding": 0,
      "position": "relative",
      "width": "initial",
    }
  }
>
  <span
    style={
      {
        "background": "none",
        "border": 0,
        "boxSizing": "border-box",
        "display": "block",
        "height": "initial",
        "margin": 0,
        "opacity": 1,
        "padding": 0,
        "paddingTop": "66.66666666666666%",
        "width": "initial",
      }
    }
  />
  <img
    alt="Sagittis vitae et leo duis ut diam quam nulla porttitor massa id neque"
    data-nimg="responsive"
    decoding="async"
    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
    style={
      {
        "border": "none",
        "bottom": 0,
        "boxSizing": "border-box",
        "display": "block",
        "height": 0,
        "left": 0,
        "margin": "auto",
        "maxHeight": "100%",
        "maxWidth": "100%",
        "minHeight": "100%",
        "minWidth": "100%",
        "objectFit": undefined,
        "objectPosition": undefined,
        "padding": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": 0,
      }
    }
  />
  <noscript>
    <img
      alt="Sagittis vitae et leo duis ut diam quam nulla porttitor massa id neque"
      data-nimg="responsive"
      decoding="async"
      loading="lazy"
      sizes="100vw"
      src="https://images.unsplash.com/photo-1431794062232-2a99a5431c6c?w=3840&fit=crop"
      srcSet="https://images.unsplash.com/photo-1431794062232-2a99a5431c6c?w=640&fit=crop 640w, https://images.unsplash.com/photo-1431794062232-2a99a5431c6c?w=750&fit=crop 750w, https://images.unsplash.com/photo-1431794062232-2a99a5431c6c?w=828&fit=crop 828w, https://images.unsplash.com/photo-1431794062232-2a99a5431c6c?w=1080&fit=crop 1080w, https://images.unsplash.com/photo-1431794062232-2a99a5431c6c?w=1200&fit=crop 1200w, https://images.unsplash.com/photo-1431794062232-2a99a5431c6c?w=1920&fit=crop 1920w, https://images.unsplash.com/photo-1431794062232-2a99a5431c6c?w=2048&fit=crop 2048w, https://images.unsplash.com/photo-1431794062232-2a99a5431c6c?w=3840&fit=crop 3840w"
      style={
        {
          "border": "none",
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "height": 0,
          "left": 0,
          "margin": "auto",
          "maxHeight": "100%",
          "maxWidth": "100%",
          "minHeight": "100%",
          "minWidth": "100%",
          "objectFit": undefined,
          "objectPosition": undefined,
          "padding": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": 0,
        }
      }
    />
  </noscript>
</span>
`;
